reign_derive/tests/ui/compile_fail/model_attr_invalid.rs
use reign::prelude::*;

#[derive(Model)]
#[model(invalid)]
struct User {
    id: i32,
}

fn main() {}
