reign_derive/tests/ui/compile_fail/model_attr_invalid.stderr
error: unexpected attribute: invalid
 --> $DIR/model_attr_invalid.rs:4:9
  |
4 | #[model(invalid)]
  |         ^^^^^^^
